# anidata

./: .env  .gitignore  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  docker-compose.yml  monitor.py  pr.py  requirements.txt  start.bat  start.sh  trigger_dag_scraper.py
.github/workflows/: ci-cd.yml  ci.yml
airflow/dags/: 00_hello_anidata.py  01_process_json_xml.py  02_scraper_site_local.py  03_nettoyage_dag.py
airflow/scripts/: 01_audit_complet.py  03_nettoyage.py  04_feature_engineering.py  05_validation.py  elasticsearch import Elasticsearch.py
anidata-scraper/: .gitignore  README.md  pyproject.toml
anidata-scraper/anidata_scraper/: __init__.py  scraper.py
anidata-scraper/tests/: fixtures.py  test_scraper.py
data/: LIRE_MOI.txt  anime_2.json  anime_3.xml
data/scraped_data/: anime_20260428_134826.json  anime_20260428_140415.json  anime_20260428_144751.json  anime_20260428_144857.json  anime_20260428_152937.json
elk/logstash/pipeline/: anime.conf
github-actions/: Dockerfile  README.md
github-actions/.github/workflows/: ci-cd.yml  ci.yml
grafana/dashboards/: anidata-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: elasticsearch.yml
mock-site/: README.md  docker-compose.yml
mock-site/generator/: example_scraper.py  generate_site.py  seed_data.py
mock-site/site/: about.html  index.html
mock-site/site/anime/: 86.html  91-days.html  a-place-further-than-the-universe.html  a-silent-voice.html  akame-ga-kill.html  akira.html  angel-beats.html  anohana.html  (+95 more)
output/: rapport_validation.txt
(+14 files in other folders)
