[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anidata-scraper"
version = "1.0.0"
description = "Scraper du mock-site AniData Lab"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
anidata-scrape = "anidata_scraper.scraper:main"

[tool.setuptools.packages.find]
include = ["anidata_scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length géré par ruff format

[tool.ruff.format]
quote-style = "double"
